updated public files to customize for Airport Bars

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CRUD Template</title>
+        <title>Airport Bar Reviews!</title>
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-      <header role="banner">Site Header</header>
+      <header role="banner">Airport Bar Reviews .Com</header>
       <nav role="navigation">
         <button id="home">Home</button>
-        <button id="list">List</button>
+        <button id="airports">Airports</button>
+        <button id="bars">Bars</button>
+        <button id="reviews">Reviews</button>
       </nav>
       <main role="main" aria-live="assertive">
         <!-- Content will appear below -->
-        <h2>This is the home page.</h2>
-        <p>Click "List" to run a GET command and view a list of items in the database</p>
+        <h1>Welcome to Airport Bar Reviews .Com!</h1>
+        <p>Visit your local airport bar and click the buttons above to get started</p>
       </main>
 
       <script type="text/javascript"
