updated READ functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       <header role="banner">Airport Bar Reviews .Com</header>
       <nav role="navigation">
         <button id="home">Home</button>
-        <button id="airports">Airports</button>
-        <button id="bars">Bars</button>
+        <!-- <button id="airports">Airports</button>
+        <button id="bars">Bars</button> -->
         <button id="reviews">Reviews</button>
       </nav>
       <main role="main" aria-live="assertive">
